...
        }
    }

    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text("Registro") },
                navigationIcon = {
                    IconButton(onClick = onBack) {
                        Icon(Icons.Default.ArrowBack, "Volver")
                    }
                }
            )
...
                        return@Button
                    }
                    userViewModel.registrarUsuario(nombre, correo, password)
                },
                modifier = Modifier.fillMaxWidth().height(56.dp)
            ) {
                Text("Registrarse")
            }
        }
    }
}
@Preview
@Composable
...
